# AndroidEGLcpp

./: .gitignore  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: text.frag  text.vert  ui.frag  ui.vert
app/src/main/cpp/: CMakeLists.txt  assets.cpp  assets.hpp  bitmask.hpp  compile_commands.json  config.h  fmt.hpp  javahack.cpp  javahack.hpp  logging.hpp  main.c  main.cpp  math.hpp  text.c  text_renderer.cpp  text_renderer.hpp  types.hpp  ui_renderer.cpp  ui_renderer.hpp
app/src/main/tools/: copyfont.sh  getdeps.sh
